--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Khalid Khan
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Web Developer from india
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/khalidkhan433/khalidkhan433.github.io/master/images/jekyll-logo.png
 
 #
 # Flags below are optional
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: khalidkhan433/khalidkhan433.github.io
   instagram:
   linkedin:
   pinterest:
