--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Khalid Khan
 
 # Short bio or description (displayed in the header)
-description: Mobile Architect from india
+description: Mobile Architect
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/khalidkhan020/khalidkhan020.github.io/master/images/jekyll-logo.png
