--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Khalid Khan
 description: Mobile Architect
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/khalidkhan020/khalidkhan020.github.io/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/khalidkhan020/khalidkhan020.github.io/master/images/tet.jpg
 
 #
 # Flags below are optional
