--- a/_config.yml
+++ b/_config.yml
@@ -21,12 +21,12 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: khalidkhan020/khalidkhan020.github.io
+  github: khalidkhan020
   instagram:
-  linkedin:
+  linkedin: https://www.linkedin.com/in/mohd-khalid-khan-701a5831
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: khalidkhan020
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
