--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://raw.githubusercontent.com/khalidkhan020/khalidkhan020.github.io/
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: khalidkhan.dev@gmail.com
   facebook:
   flickr:
   github: khalidkhan020
